@@ -26,6 +26,17 @@
 
     <!--Plugin set custom properties-->
     <build>
+        <!--DELETE-->
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.19.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -40,6 +51,7 @@
                 </configuration>
             </plugin>
 
+            <!--DELETE-->
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.2.2</version>
@@ -58,6 +70,37 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                    <testFailureIgnore>false</testFailureIgnore>
+                    <argLine>-Xmx${mavenSurefirePlugin.Xmx}
+                        -XX:PermSize=${mavenSurefirePlugin.PermSize}
+                        -XX:MaxPermSize=${mavenSurefirePlugin.MaxPermSize}
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                        -Dallure.max.title.length=1000
+                    </argLine>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <source>${java-version}</source>
+                    <target>${java-version}</target>
+                </configuration>
+            </plugin>
+
 
             <!--Plugin for create XML-->
             <plugin>
